time tracking wuw

--- a/time_tracking.tex
+++ b/time_tracking.tex
@@ -14,7 +14,8 @@
 		& & \textbf{45} \\
 		\hline
 		ph &  &  \\
-		& & \textbf{} \\
+			& Architectural Patterns & 22 \\
+		& & \textbf{22} \\
 		\hline
 		am & system scope and context & 10 \\
 		 & functional requirements & 3 \\
