--- a/time_tracking.tex
+++ b/time_tracking.tex
@@ -25,8 +25,8 @@
 		 & use cases & 7 \\
 		& & \textbf{35} \\
 		\hline
-		er &  &  \\
-		& & \textbf{} \\
+		er & Evaluation, Design decisions, compatibilitytactics & 21 \\
+		& & \textbf{21} \\
 		\hline
 	\end{tabularx}
 	\caption{Time tracking}
